--- a/index.html
+++ b/index.html
@@ -1,23 +1,11 @@
 ---
 layout: default
-title: Home
+title: EPSRC CDT in Machine Learning Systems
 ---
 
 <div>
     <p>
-      {% include group-intro.html %}
-    </p>
-
-    <h3>Current members</h3>
-
-    {% include members-with-photos.html %}
-
-    <h3>Past members</h3>
-
-    {% include past-members.html %}
-
-    <p class='member-footnote'>
-    (Research Associates in bold) 
+      {% include cdt-intro.html %}
     </p>
 </div>
     <!--div class='recent-news'>
